# DIY-Chess

src/: CMakeLists.txt  Enums.h  Structs.h  config.h.in  main.cpp
src/Board/: Board.cpp  Board.h  Tile.cpp  Tile.h
src/Functions/: BasicFunctions.cpp  BasicFunctions.h
src/Pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
